Connected viewmodel with view and added logger
- Added logger to verify see the data in log
- Connected data with view to inflate the UI
- Added adapter class to inflate tweet
- Added application name in manifest

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0272A6</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="dull_white">#FFFFFF</color>
+    <color name="secondary_gray">#BBB9B9</color>
 </resources>
