--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
 
     <dimen name="text_size_18sp">18sp</dimen>
     <dimen name="text_size_20sp">20sp</dimen>
+    <dimen name="margin_50dp">50dp</dimen>
+    <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="text_size_16sp">16sp</dimen>
+    <dimen name="margin_4dp">4dp</dimen>
 </resources>
