--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -90,6 +90,7 @@
             tools:text="46589" />
 
         <TextView
+            android:id="@+id/tv_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/tv_handle"
@@ -98,6 +99,13 @@
             tools:text="@tools:sample/lorem/random"
             android:textColor="@android:color/black"
             android:layout_margin="@dimen/margin_8dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_text"
+            android:layout_marginTop="@dimen/margin_8dp"
+            android:background="@color/secondary_gray"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
