--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -20,8 +20,7 @@
             android:layout_height="@dimen/margin_50dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/ic_person_24dp"
-            android:background="@drawable/ic_circle_24dp"/>
+            android:src="@drawable/ic_baseline_account_circle_24"/>
 
         <TextView
             android:id="@+id/tv_name"
