--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -80,7 +80,8 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/cv_search"
                 app:layout_constraintEnd_toStartOf="@id/tv_api_state"
-                android:layout_marginTop="@dimen/margin_20dp" />
+                android:layout_marginTop="@dimen/margin_20dp"
+                android:visibility="invisible"/>
 
             <TextView
                 android:id="@+id/tv_api_state"
